src/test/deca/codegen/invalid/mod_0.deca
// Description :
//    erreur d'exécution attendue : modulo par zéro.

// Resultats 
//    Erreur à l'exécution

{
    int x = 0;
    println(1 % x);
}